updating code to show image

--- a/app/src/main/res/layout/fragment_single_account_mode.xml
+++ b/app/src/main/res/layout/fragment_single_account_mode.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".SingleAccountModeFragment">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -83,9 +83,9 @@
 
                     <EditText
                         android:id="@+id/msgraph_url"
-                        android:layout_height="wrap_content"
                         android:layout_width="match_parent"
-                        android:text="https://graph.microsoft.com/v1.0/me"
+                        android:layout_height="wrap_content"
+                        android:text="https://graph.microsoft.com/v1.0/me/photo/$value"
                         android:textSize="12sp" />
                 </LinearLayout>
             </LinearLayout>
@@ -190,13 +190,12 @@
             </LinearLayout>
 
 
-            <TextView
+            <ImageView
                 android:id="@+id/txt_log"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginTop="20dp"
-                android:layout_weight="0.8"
-                android:text="Output goes here..." />
+                android:layout_weight="0.8" />
 
         </LinearLayout>
     </LinearLayout>
